--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -3,7 +3,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    z-index: var(z-index);
+    z-index: var(--z-fixed);
     background-color: var(--body-color);
 }
 
@@ -46,6 +46,11 @@
 .active-link,
 .nav__link:hover {
     color: var(--title-color-dark);
+}
+
+/* Change background header */
+.scroll-header {
+  box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.15);
 }
 
 /*================ BREAKPOINTS ==================*/
